--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   "dependencies": {
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
-    "mammoth": "^1.11.0",
-    "openai": "^6.15.0",
-    "pdf-parse": "^2.4.5"
+    "openai": "^6.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
-    "globals": "^16.5.0"
+    "globals": "^16.5.0",
+    "mammoth": "^1.11.0",
+    "pdf-parse": "^2.4.5"
+
   }
 }
